bindings/c/include/proven.h


typedef enum {
    PROVEN_OK                      =   0,
    PROVEN_ERR_NULL_POINTER        =  -1,
    PROVEN_ERR_INVALID_ARGUMENT    =  -2,
    PROVEN_ERR_OVERFLOW            =  -3,
    PROVEN_ERR_UNDERFLOW           =  -4,
    PROVEN_ERR_DIVISION_BY_ZERO    =  -5,
    PROVEN_ERR_PARSE_FAILURE       =  -6,
    PROVEN_ERR_VALIDATION_FAILED   =  -7,
    PROVEN_ERR_OUT_OF_BOUNDS       =  -8,
    PROVEN_ERR_ENCODING_ERROR      =  -9,
    PROVEN_ERR_ALLOCATION_FAILED   = -10,
    PROVEN_ERR_NOT_IMPLEMENTED     = -99
} ProvenStatus;
typedef struct { int32_t status; int64_t value; } ProvenIntResult;
typedef struct { int32_t status; bool value; } ProvenBoolResult;
typedef struct { int32_t status; char* value; size_t length; } ProvenStringResult;
typedef struct { int32_t status; double value; } ProvenFloatResult;
void proven_free_string(char* ptr);
int32_t proven_init(void);
void proven_deinit(void);
bool proven_is_initialized(void);
uint32_t proven_ffi_abi_version(void);
uint32_t proven_version_major(void);
uint32_t proven_version_minor(void);
uint32_t proven_version_patch(void);
uint32_t proven_module_count(void);
ProvenIntResult proven_math_div(int64_t numerator, int64_t denominator);
ProvenIntResult proven_math_mod(int64_t numerator, int64_t denominator);
ProvenIntResult proven_math_add_checked(int64_t a, int64_t b);
ProvenIntResult proven_math_sub_checked(int64_t a, int64_t b);
ProvenIntResult proven_math_mul_checked(int64_t a, int64_t b);
ProvenIntResult proven_math_abs_safe(int64_t n);
int64_t proven_math_clamp(int64_t lo, int64_t hi, int64_t value);
ProvenIntResult proven_math_pow_checked(int64_t base, uint32_t exp);
ProvenBoolResult proven_string_is_valid_utf8(const uint8_t* ptr, size_t len);
ProvenStringResult proven_string_escape_sql(const uint8_t* ptr, size_t len);
ProvenStringResult proven_string_escape_html(const uint8_t* ptr, size_t len);
ProvenStringResult proven_string_escape_js(const uint8_t* ptr, size_t len);
ProvenBoolResult proven_path_has_traversal(const uint8_t* ptr, size_t len);
ProvenStringResult proven_path_sanitize_filename(const uint8_t* ptr, size_t len);
ProvenBoolResult proven_crypto_constant_time_eq(
    const uint8_t* ptr1, size_t len1,
    const uint8_t* ptr2, size_t len2
);
ProvenStatus proven_crypto_random_bytes(uint8_t* ptr, size_t len);
typedef struct {
    char*    scheme;       size_t scheme_len;
    char*    host;         size_t host_len;
    uint16_t port;         bool   has_port;
    char*    path;         size_t path_len;
    char*    query;        size_t query_len;
    char*    fragment;     size_t fragment_len;
} ProvenUrlComponents;
typedef struct {
    int32_t             status;
    ProvenUrlComponents components;
} ProvenUrlResult;
ProvenUrlResult proven_url_parse(const uint8_t* ptr, size_t len);
void proven_url_free(ProvenUrlComponents* components);
ProvenBoolResult proven_email_is_valid(const uint8_t* ptr, size_t len);
typedef struct { uint8_t octets[4]; } ProvenIPv4Address;
typedef struct {
    int32_t          status;
    ProvenIPv4Address address;
} ProvenIPv4Result;
ProvenIPv4Result proven_network_parse_ipv4(const uint8_t* ptr, size_t len);
bool proven_network_ipv4_is_private(ProvenIPv4Address addr);
bool proven_network_ipv4_is_loopback(ProvenIPv4Address addr);
ProvenBoolResult proven_header_has_crlf(const uint8_t* ptr, size_t len);
ProvenBoolResult proven_header_is_valid_name(const uint8_t* ptr, size_t len);
ProvenBoolResult proven_header_is_dangerous(const uint8_t* ptr, size_t len);
ProvenStringResult proven_header_render(
    const uint8_t* name_ptr, size_t name_len,
    const uint8_t* value_ptr, size_t value_len
);
typedef struct {
    double  tokens;
    double  capacity;
    double  refill_rate;   
    int64_t last_refill;   
} ProvenRateLimiter;
ProvenRateLimiter* proven_rate_limiter_create(double capacity, double refill_rate);
bool proven_rate_limiter_try_acquire(ProvenRateLimiter* limiter, double tokens);
void proven_rate_limiter_free(ProvenRateLimiter* limiter);
typedef enum {
    PROVEN_CIRCUIT_CLOSED    = 0,  
    PROVEN_CIRCUIT_OPEN      = 1,  
    PROVEN_CIRCUIT_HALF_OPEN = 2   
} ProvenCircuitState;
typedef struct {
    ProvenCircuitState state;
    uint32_t failure_count;
    uint32_t failure_threshold;
    uint32_t success_count;
    uint32_t success_threshold;
    int64_t  last_failure;      
    int64_t  timeout_ms;        
} ProvenCircuitBreaker;
ProvenCircuitBreaker* proven_circuit_breaker_create(
    uint32_t failure_threshold,
    uint32_t success_threshold,
    int64_t timeout_ms
);
bool proven_circuit_breaker_allow(ProvenCircuitBreaker* cb);
void proven_circuit_breaker_success(ProvenCircuitBreaker* cb);
void proven_circuit_breaker_failure(ProvenCircuitBreaker* cb);
ProvenCircuitState proven_circuit_breaker_state(ProvenCircuitBreaker* cb);
void proven_circuit_breaker_free(ProvenCircuitBreaker* cb);
typedef struct {
    uint32_t max_attempts;
    uint64_t base_delay_ms;
    uint64_t max_delay_ms;
    double   multiplier;   
} ProvenRetryConfig;
uint64_t proven_retry_delay(ProvenRetryConfig config, uint32_t attempt);
bool proven_retry_should_retry(ProvenRetryConfig config, uint32_t attempt);
typedef struct {
    uint64_t value;
    uint64_t max_value;
} ProvenMonotonicCounter;
ProvenMonotonicCounter* proven_monotonic_create(uint64_t initial, uint64_t max_value);
ProvenIntResult proven_monotonic_next(ProvenMonotonicCounter* counter);
void proven_monotonic_free(ProvenMonotonicCounter* counter);
typedef struct {
    uint32_t current_state;
    uint32_t state_count;
    uint8_t* transitions;  
} ProvenStateMachine;
ProvenStateMachine* proven_state_machine_create(uint32_t state_count, uint32_t initial_state);
bool proven_state_machine_allow(ProvenStateMachine* sm, uint32_t from, uint32_t to);
bool proven_state_machine_transition(ProvenStateMachine* sm, uint32_t to);
uint32_t proven_state_machine_state(ProvenStateMachine* sm);
void proven_state_machine_free(ProvenStateMachine* sm);
typedef struct {
    double* data;
    size_t  rows;
    size_t  cols;
} ProvenTensor2D;
ProvenTensor2D* proven_tensor_create(size_t rows, size_t cols);
ProvenStatus proven_tensor_set(ProvenTensor2D* tensor, size_t row, size_t col, double value);
ProvenFloatResult proven_tensor_get(ProvenTensor2D* tensor, size_t row, size_t col);
ProvenTensor2D* proven_tensor_matmul(ProvenTensor2D* a, ProvenTensor2D* b);
void proven_tensor_free(ProvenTensor2D* tensor);
ProvenStatus proven_ml_softmax(const double* input, double* output, size_t len);
double proven_ml_sigmoid(double x);
double proven_ml_relu(double x);
double proven_ml_leaky_relu(double x, double alpha);
double proven_ml_clamp(double x, double min_val, double max_val);
typedef struct {
    uint64_t key;
    int64_t  value;
    size_t   prev;
    size_t   next;
    bool     valid;
} ProvenLRUEntry;
typedef struct {
    ProvenLRUEntry* entries;
    size_t          capacity;
    size_t          head;
    size_t          tail;
    size_t          count;
} ProvenLRUCache;
ProvenLRUCache* proven_lru_create(size_t capacity);
ProvenIntResult proven_lru_get(ProvenLRUCache* cache, uint64_t key);
ProvenStatus proven_lru_put(ProvenLRUCache* cache, uint64_t key, int64_t value);
void proven_lru_free(ProvenLRUCache* cache);
typedef struct {
    uint8_t* edges;      
    size_t   node_count;
} ProvenGraph;
ProvenGraph* proven_graph_create(size_t node_count);
ProvenStatus proven_graph_add_edge(ProvenGraph* graph, size_t from, size_t to);
bool proven_graph_has_edge(ProvenGraph* graph, size_t from, size_t to);
void proven_graph_free(ProvenGraph* graph);
typedef struct {
    char*  registry;      size_t registry_len;
    char*  repository;    size_t repository_len;
    char*  tag;           size_t tag_len;
    char*  digest;        size_t digest_len;
} ProvenImageReference;
typedef struct {
    int32_t              status;
    ProvenImageReference reference;
} ProvenImageRefResult;
ProvenImageRefResult proven_registry_parse(const uint8_t* ptr, size_t len);
ProvenStringResult proven_registry_to_string(const ProvenImageReference* ref);
ProvenBoolResult proven_registry_has_registry(const ProvenImageReference* ref);
typedef enum {
    PROVEN_HASH_SHA256 = 0,
    PROVEN_HASH_SHA384 = 1,
    PROVEN_HASH_SHA512 = 2,
    PROVEN_HASH_BLAKE3 = 3
} ProvenHashAlgorithm;
typedef struct {
    ProvenHashAlgorithm algorithm;
    char*               value;
    size_t              value_len;
} ProvenDigest;
typedef struct {
    int32_t      status;
    ProvenDigest digest;
} ProvenDigestResult;
ProvenDigestResult proven_digest_parse(const uint8_t* ptr, size_t len);
ProvenBoolResult proven_digest_verify(const ProvenDigest* expected, const ProvenDigest* actual);
ProvenStringResult proven_digest_to_string(const ProvenDigest* digest);
ProvenStringResult proven_http_url_encode(const uint8_t* ptr, size_t len);
ProvenStringResult proven_http_url_decode(const uint8_t* ptr, size_t len);
typedef struct {
    char*  scheme;   size_t scheme_len;
    char*  realm;    size_t realm_len;
    char*  service;  size_t service_len;
    char*  scope;    size_t scope_len;
} ProvenAuthChallenge;
typedef struct {
    int32_t             status;
    ProvenAuthChallenge challenge;
} ProvenAuthChallengeResult;
ProvenAuthChallengeResult proven_http_parse_www_authenticate(const uint8_t* ptr, size_t len);
typedef struct { uint8_t r; uint8_t g; uint8_t b; } ProvenRGBColor;
typedef struct {
    double h;  
    double s;  
    double l;  
} ProvenHSLColor;
typedef struct {
    int32_t       status;
    ProvenRGBColor color;
} ProvenColorResult;
ProvenColorResult proven_color_parse_hex(const uint8_t* ptr, size_t len);
ProvenHSLColor proven_color_rgb_to_hsl(ProvenRGBColor rgb);
ProvenStringResult proven_color_to_hex(ProvenRGBColor rgb);
double proven_angle_deg_to_rad(double degrees);
double proven_angle_rad_to_deg(double radians);
double proven_angle_normalize_degrees(double degrees);
double proven_angle_normalize_radians(double radians);
typedef enum {
    PROVEN_LENGTH_METERS      = 0,
    PROVEN_LENGTH_KILOMETERS  = 1,
    PROVEN_LENGTH_CENTIMETERS = 2,
    PROVEN_LENGTH_MILLIMETERS = 3,
    PROVEN_LENGTH_FEET        = 4,
    PROVEN_LENGTH_INCHES      = 5,
    PROVEN_LENGTH_MILES       = 6,
    PROVEN_LENGTH_YARDS       = 7
} ProvenLengthUnit;
typedef enum {
    PROVEN_TEMP_CELSIUS    = 0,
    PROVEN_TEMP_FAHRENHEIT = 1,
    PROVEN_TEMP_KELVIN     = 2
} ProvenTempUnit;
ProvenFloatResult proven_unit_convert_length(double value, ProvenLengthUnit from, ProvenLengthUnit to);
ProvenFloatResult proven_unit_convert_temp(double value, ProvenTempUnit from, ProvenTempUnit to);
typedef struct {
    int64_t* data;
    size_t   capacity;
    size_t   head;
    size_t   tail;
    size_t   count;
} ProvenBoundedQueue;
ProvenBoundedQueue* proven_queue_create(size_t capacity);
bool proven_queue_push(ProvenBoundedQueue* queue, int64_t value);
ProvenIntResult proven_queue_pop(ProvenBoundedQueue* queue);
size_t proven_queue_size(ProvenBoundedQueue* queue);
void proven_queue_free(ProvenBoundedQueue* queue);
typedef struct {
    uint8_t* bits;
    size_t   bit_count;
    uint32_t hash_count;
} ProvenBloomFilter;
ProvenBloomFilter* proven_bloom_create(size_t expected_elements, double false_positive_rate);
void proven_bloom_add(ProvenBloomFilter* filter, const uint8_t* ptr, size_t len);
bool proven_bloom_contains(ProvenBloomFilter* filter, const uint8_t* ptr, size_t len);
void proven_bloom_free(ProvenBloomFilter* filter);
typedef enum {
    PROVEN_EVENT_VALIDATION_FAILED   = 1,
    PROVEN_EVENT_RESOURCE_ACQUIRED   = 2,
    PROVEN_EVENT_RESOURCE_RELEASED   = 3,
    PROVEN_EVENT_RATE_LIMIT_HIT      = 4,
    PROVEN_EVENT_CIRCUIT_STATE_CHANGE = 5,
    PROVEN_EVENT_SIGNAL_RECEIVED     = 6,
    PROVEN_EVENT_RETRY_ATTEMPT       = 7,
    PROVEN_EVENT_CRYPTO_OPERATION    = 8,
    PROVEN_EVENT_CUSTOM              = 100
} ProvenEventType;
typedef struct {
    ProvenEventType event_type;
    const char*     data_ptr;    
    size_t          data_len;
    uint64_t        timestamp_us; 
    int32_t         code;         
} ProvenEvent;
typedef int32_t (*ProvenCallbackFn)(void* context, const ProvenEvent* event);
typedef uint32_t ProvenCallbackHandle;
ProvenCallbackHandle proven_callback_register(
    ProvenEventType event_type,
    ProvenCallbackFn callback,
    void* context
);
ProvenStatus proven_callback_unregister(ProvenCallbackHandle handle);
int32_t proven_callback_fire(
    ProvenEventType event_type,
    const char* data_ptr, size_t data_len,
    int32_t code
);
uint32_t proven_callback_count(ProvenEventType event_type);
uint32_t proven_callback_clear_all(void);