bindings/v/proven.v


// SafeRateLimiter
fn C.proven_rate_limiter_create(capacity f64, refill_rate f64) &C.ProvenRateLimiter
fn C.proven_rate_limiter_try_acquire(limiter &C.ProvenRateLimiter, tokens f64) bool
fn C.proven_rate_limiter_free(limiter &C.ProvenRateLimiter)

// SafeCircuitBreaker
fn C.proven_circuit_breaker_create(failure_threshold u32, success_threshold u32, timeout_ms i64) &C.ProvenCircuitBreaker
fn C.proven_circuit_breaker_allow(cb &C.ProvenCircuitBreaker) bool
fn C.proven_circuit_breaker_success(cb &C.ProvenCircuitBreaker)
fn C.proven_circuit_breaker_failure(cb &C.ProvenCircuitBreaker)
fn C.proven_circuit_breaker_state(cb &C.ProvenCircuitBreaker) int
fn C.proven_circuit_breaker_free(cb &C.ProvenCircuitBreaker)

// SafeRetry
fn C.proven_retry_delay(config C.ProvenRetryConfig, attempt u32) u64
fn C.proven_retry_should_retry(config C.ProvenRetryConfig, attempt u32) bool

// SafeMonotonic
fn C.proven_monotonic_create(initial u64, max_value u64) &C.ProvenMonotonicCounter
fn C.proven_monotonic_next(counter &C.ProvenMonotonicCounter) C.ProvenIntResult
fn C.proven_monotonic_free(counter &C.ProvenMonotonicCounter)

// SafeStateMachine
fn C.proven_state_machine_create(state_count u32, initial_state u32) &C.ProvenStateMachine
fn C.proven_state_machine_allow(sm &C.ProvenStateMachine, from u32, to u32) bool
fn C.proven_state_machine_transition(sm &C.ProvenStateMachine, to u32) bool
fn C.proven_state_machine_state(sm &C.ProvenStateMachine) u32
fn C.proven_state_machine_free(sm &C.ProvenStateMachine)

// SafeTensor
fn C.proven_tensor_create(rows usize, cols usize) &C.ProvenTensor2D
fn C.proven_tensor_set(tensor &C.ProvenTensor2D, row usize, col usize, value f64) int
fn C.proven_tensor_get(tensor &C.ProvenTensor2D, row usize, col usize) C.ProvenFloatResult
fn C.proven_tensor_matmul(a &C.ProvenTensor2D, b &C.ProvenTensor2D) &C.ProvenTensor2D
fn C.proven_tensor_free(tensor &C.ProvenTensor2D)

// SafeMl
fn C.proven_ml_softmax(input &f64, output &f64, len usize) int
fn C.proven_ml_sigmoid(x f64) f64
fn C.proven_ml_relu(x f64) f64
fn C.proven_ml_leaky_relu(x f64, alpha f64) f64
fn C.proven_ml_clamp(x f64, min_val f64, max_val f64) f64

// SafeLru
fn C.proven_lru_create(capacity usize) &C.ProvenLRUCache
fn C.proven_lru_get(cache &C.ProvenLRUCache, key u64) C.ProvenIntResult
fn C.proven_lru_put(cache &C.ProvenLRUCache, key u64, value i64) int
fn C.proven_lru_free(cache &C.ProvenLRUCache)

// SafeGraph
fn C.proven_graph_create(node_count usize) &C.ProvenGraph
fn C.proven_graph_add_edge(graph &C.ProvenGraph, from usize, to usize) int
fn C.proven_graph_has_edge(graph &C.ProvenGraph, from usize, to usize) bool
fn C.proven_graph_free(graph &C.ProvenGraph)

// SafeQueue
fn C.proven_queue_create(capacity usize) &C.ProvenBoundedQueue
fn C.proven_queue_push(queue &C.ProvenBoundedQueue, value i64) bool
fn C.proven_queue_pop(queue &C.ProvenBoundedQueue) C.ProvenIntResult
fn C.proven_queue_size(queue &C.ProvenBoundedQueue) usize
fn C.proven_queue_free(queue &C.ProvenBoundedQueue)

// SafeBloom
fn C.proven_bloom_create(expected_elements usize, false_positive_rate f64) &C.ProvenBloomFilter
fn C.proven_bloom_add(filter &C.ProvenBloomFilter, ptr &u8, len usize)
fn C.proven_bloom_contains(filter &C.ProvenBloomFilter, ptr &u8, len usize) bool
fn C.proven_bloom_free(filter &C.ProvenBloomFilter)

// SafeRegistry
fn C.proven_registry_parse(ptr &u8, len usize) C.ProvenImageRefResult
fn C.proven_registry_to_string(ref &C.ProvenImageReference) C.ProvenStringResult
fn C.proven_registry_has_registry(ref &C.ProvenImageReference) C.ProvenBoolResult

// SafeDigest
fn C.proven_digest_parse(ptr &u8, len usize) C.ProvenDigestResult
fn C.proven_digest_verify(expected &C.ProvenDigest, actual &C.ProvenDigest) C.ProvenBoolResult
fn C.proven_digest_to_string(digest &C.ProvenDigest) C.ProvenStringResult

// SafeHttp
fn C.proven_http_url_encode(ptr &u8, len usize) C.ProvenStringResult
fn C.proven_http_url_decode(ptr &u8, len usize) C.ProvenStringResult
fn C.proven_http_parse_www_authenticate(ptr &u8, len usize) C.ProvenAuthChallengeResult

// SafeColor
fn C.proven_color_parse_hex(ptr &u8, len usize) C.ProvenColorResult
fn C.proven_color_rgb_to_hsl(rgb C.ProvenRGBColor) C.ProvenHSLColor
fn C.proven_color_to_hex(rgb C.ProvenRGBColor) C.ProvenStringResult

// SafeAngle
fn C.proven_angle_deg_to_rad(degrees f64) f64
fn C.proven_angle_rad_to_deg(radians f64) f64
fn C.proven_angle_normalize_degrees(degrees f64) f64
fn C.proven_angle_normalize_radians(radians f64) f64

// SafeUnit
fn C.proven_unit_convert_length(value f64, from int, to int) C.ProvenFloatResult
fn C.proven_unit_convert_temp(value f64, from int, to int) C.ProvenFloatResult

// Callbacks
fn C.proven_callback_register(event_type int, callback fn (voidptr, &C.ProvenEvent) int, context voidptr) u32
fn C.proven_callback_unregister(handle u32) int
fn C.proven_callback_fire(event_type int, data_ptr &u8, data_len usize, code int) int
fn C.proven_callback_count(event_type int) u32
fn C.proven_callback_clear_all() u32

// ============================================================================
// Idiomatic V wrapper functions
// ============================================================================

// Helper: convert C string result to V string, freeing the C allocation.
fn string_from_proven(result C.ProvenStringResult) ?string {
	if result.status != 0 {
		return none
	}
	if result.value == unsafe { nil } {
		return none
	}
	v_str := unsafe { tos(result.value, int(result.length)) }.clone()
	C.proven_free_string(result.value)
	return v_str
}

// --- Lifecycle ---

// Initialize the Proven runtime. Must be called before any other function.
pub fn init() bool {
	return C.proven_init() == 0
}

// Cleanup the Proven runtime.
pub fn deinit() {
	C.proven_deinit()
}

// Check if the runtime is initialized.
pub fn is_initialized() bool {
	return C.proven_is_initialized()
}

// --- Version ---

// Get the FFI ABI version.
pub fn ffi_abi_version() u32 {
	return C.proven_ffi_abi_version()
}

// Get major version number.
pub fn version_major() u32 {
	return C.proven_version_major()
}

// Get minor version number.
pub fn version_minor() u32 {
	return C.proven_version_minor()
}

// Get patch version number.
pub fn version_patch() u32 {
	return C.proven_version_patch()
}

// Get total module count.
pub fn module_count() u32 {
	return C.proven_module_count()
}

// --- SafeMath ---

// Safe integer division. Returns none on division by zero or overflow.
pub fn safe_div(a i64, b i64) ?i64 {
	result := C.proven_math_div(a, b)
	if result.status != 0 {
		return none
	}
	return result.value
}

// Safe modulo. Returns none on division by zero.
pub fn safe_mod(a i64, b i64) ?i64 {
	result := C.proven_math_mod(a, b)
	if result.status != 0 {
		return none
	}
	return result.value
}

// Checked addition with overflow detection.
pub fn safe_add(a i64, b i64) ?i64 {
	result := C.proven_math_add_checked(a, b)
	if result.status != 0 {
		return none
	}
	return result.value
}

// Checked subtraction with underflow detection.
pub fn safe_sub(a i64, b i64) ?i64 {
	result := C.proven_math_sub_checked(a, b)
	if result.status != 0 {
		return none
	}
	return result.value
}

// Checked multiplication with overflow detection.
pub fn safe_mul(a i64, b i64) ?i64 {
	result := C.proven_math_mul_checked(a, b)
	if result.status != 0 {
		return none
	}
	return result.value
}

// Safe absolute value. Returns none for min_i64.
pub fn safe_abs(n i64) ?i64 {
	result := C.proven_math_abs_safe(n)
	if result.status != 0 {
		return none
	}
	return result.value
}

// Clamp value to [lo, hi] range.
pub fn clamp(lo i64, hi i64, value i64) i64 {
	return C.proven_math_clamp(lo, hi, value)
}

// Integer exponentiation with overflow checking.
pub fn safe_pow(base i64, exp u32) ?i64 {
	result := C.proven_math_pow_checked(base, exp)
	if result.status != 0 {
		return none
	}
	return result.value
}

// --- SafeString ---

// Check if bytes are valid UTF-8.
pub fn is_valid_utf8(data []u8) ?bool {
	result := C.proven_string_is_valid_utf8(data.data, usize(data.len))
	if result.status != 0 {
		return none
	}
	return result.value
}

// Escape string for SQL (single quotes).
pub fn escape_sql(input string) ?string {
	return string_from_proven(C.proven_string_escape_sql(input.str, usize(input.len)))
}

// Escape string for HTML (prevents XSS).
pub fn escape_html(input string) ?string {
	return string_from_proven(C.proven_string_escape_html(input.str, usize(input.len)))
}

// Escape string for JavaScript string literals.
pub fn escape_js(input string) ?string {
	return string_from_proven(C.proven_string_escape_js(input.str, usize(input.len)))
}

// --- SafePath ---

// Check if path contains directory traversal sequences.
pub fn has_traversal(path string) bool {
	result := C.proven_path_has_traversal(path.str, usize(path.len))
	if result.status != 0 {
		return false
	}
	return result.value
}

// Sanitize a filename by removing dangerous characters.
pub fn sanitize_filename(filename string) ?string {
	return string_from_proven(C.proven_path_sanitize_filename(filename.str, usize(filename.len)))
}

// --- SafeCrypto ---

// Constant-time byte comparison (timing-attack safe).
pub fn constant_time_eq(a []u8, b []u8) bool {
	result := C.proven_crypto_constant_time_eq(a.data, usize(a.len), b.data, usize(b.len))
	if result.status != 0 {
		return false
	}
	return result.value
}

// Constant-time string comparison (timing-attack safe).
pub fn constant_time_equals_string(a string, b string) bool {
	return constant_time_eq(a.bytes(), b.bytes())
}

// Fill buffer with cryptographically secure random bytes.
pub fn random_bytes(count int) ?[]u8 {
	mut buf := []u8{len: count}
	status := C.proven_crypto_random_bytes(buf.data, usize(count))
	if status != 0 {
		return none
	}
	return buf
}

// --- SafeUrl ---

// Parse a URL into components. Caller must call url_free on result.
pub fn url_parse(url string) C.ProvenUrlResult {
	return C.proven_url_parse(url.str, usize(url.len))
}

// Free URL components allocated by url_parse.
pub fn url_free(mut components C.ProvenUrlComponents) {
	C.proven_url_free(&components)
}

// --- SafeEmail ---

// Validate email address (RFC 5321 simplified).
pub fn is_valid_email(email string) bool {
	result := C.proven_email_is_valid(email.str, usize(email.len))
	if result.status != 0 {
		return false
	}
	return result.value
}

// --- SafeNetwork ---

// Parse IPv4 address string.
pub fn parse_ipv4(address string) ?C.ProvenIPv4Address {
	result := C.proven_network_parse_ipv4(address.str, usize(address.len))
	if result.status != 0 {
		return none
	}
	return result.address
}

// Check if IPv4 address is private (RFC 1918).
pub fn ipv4_is_private(addr C.ProvenIPv4Address) bool {
	return C.proven_network_ipv4_is_private(addr)
}

// Check if IPv4 address is loopback (127.0.0.0/8).
pub fn ipv4_is_loopback(addr C.ProvenIPv4Address) bool {
	return C.proven_network_ipv4_is_loopback(addr)
}

// --- SafeHeader ---

// Check for CRLF injection characters in header value.
pub fn header_has_crlf(value string) bool {
	result := C.proven_header_has_crlf(value.str, usize(value.len))
	return result.status == 0 && result.value
}

// Check if header name is a valid token per RFC 7230.
pub fn header_is_valid_name(name string) bool {
	result := C.proven_header_is_valid_name(name.str, usize(name.len))
	return result.status == 0 && result.value
}

// Check if header name is dangerous.
pub fn header_is_dangerous(name string) bool {
	result := C.proven_header_is_dangerous(name.str, usize(name.len))
	return result.status == 0 && result.value
}

// Create validated header string "Name: Value".
pub fn header_render(name string, value string) ?string {
	return string_from_proven(C.proven_header_render(name.str, usize(name.len), value.str, usize(value.len)))
}
